Fixed an issue where select button was not visibl in pentacle

--- a/src/levels/pentacle.css
+++ b/src/levels/pentacle.css
@@ -63,7 +63,7 @@ td {
 #select {
   position: absolute;
   font-size: 50px;
-  top: -250px;
+  top: 700px;
   left: 750px;
 }
 
